22-Jan-2012 Enabled header dependency generation in C native builds by default. This can be disabled by passing -C.noheaderdeps on the command line to Opus.

21-Jan-2012 Added new plugin package: DependencyGenerator-dev. This adds support for generating .d files containing dependency information from files that have #include statements. Only statements using the quoted version, i.e. #include "file.h" are found. Those using the angle bracket version, i.e. #include <file.h>, are ignored since these are considered to be system headers.

21-Jan-2012 Added Opus.Core.State.Get function with a generic struct type default value argument. If the category/key are not present, the default value is returned.

21-Jan-2012 C.Compiler now has a new abstract property IncludePathCompilerSwitches.

19-Jan-2012 Added new properties to Opus.Core.BuildManager: Finished and AdditionalThreadCompletionEvents. This is so that plugins can attach additional worker threads during the build. The former is a ManualResetEvent that is signalled when the build ends. This can be used to tell the additional threads to prepare to shut down. The latter is a list of ManualResetEvents that plugins can provide for each additional thread, and BuildManager waits on these to be signalled at the end of the build, allowing the threads to shut down cleanly. The current BuildManager can be identified through Opus.Core.State.BuildManager. This will only be valid when a build is just about to start.

19-Jan-2012 Adding Opus.Core.GetModuleNoToolchain, which can locate a module by just inspecting the Target's platform and configuration.

19-Jan-2012 Added Info message at the end of the build, showing the number of data entries (Nodes in the Graph) as an idea of how much work was done.

19-Jan-2012 Adding Include and Exclude methods to C.ObjectFileCollection, C.CPlusPlus.ObjectFileCollection and MocFileCollection.ObjectFileCollection.
